Closed Bug 466234 Opened 16 years ago Closed 16 years ago

Content popup menu is overly long

Categories

(Core :: General, defect)

x86
OS/2
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.9.1b3

People

(Reporter: mozilla, Assigned: mozilla)

Details

(Keywords: verified1.9.1)

Attachments

(2 files, 2 obsolete files)

Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.9.1b2pre) Gecko/20081118 SeaMonkey/2.0a2pre We haven't had an OS/2 nightly in a while so I cannot tell when this started, but this build shows an overly long popup menu on most content. Seems like 40 entries to me and it even shows scroll arrows at top and bottom to show them all. When right-clicking on the content area to get this menu, I see the following three errors on the JS console: Error: HTMLVideoElement is not defined Source File: chrome://communicator/content/nsContextMenu.js Line: 403 Error: gContextMenu is null Source File: chrome://navigator/content/mailNavigatorOverlay.xul Line: 138 Error: gContextMenu is null Source File: chrome://editor/content/editorApplicationOverlay.js Line: 42 The first reminds me that the OS/2 builds are currently done with --disable-ogg --disable-wave so MOZ_MEDIA is deactivated. Perhaps that needs to be tested for somewhere?
I get an additional error when selecting "Open in new tab" from the context menu: Error: gContextMenu is null Source File: chrome://navigator/content/navigator.xul Line: 1 I suspect that this is linked to the problem.
Firefox actually has the same problem and I suspect Thunderbird, too. Preprocessing contextMenu.js to exclude the lines about the HTMLVideo and HTMLAudio classes using #ifdef MOZ_MEDIA should help.
Product: SeaMonkey → Core
QA Contact: general → general
Attached patch fix for SeaMonkey (obsolete) — Splinter Review
Of course I was wrong before, TB doesn't need a fix because it doesn't use HTML{Video,Audio} in its code (yet). So this is the whole fix for comm-central.
Assignee: nobody → mozilla
Status: NEW → ASSIGNED
Attachment #349603 - Flags: superreview?(neil)
Attachment #349603 - Flags: review?(neil)
Attached patch fix for Firefox (obsolete) — Splinter Review
Same fix for Firefox.
Attachment #349604 - Flags: review?(gavin.sharp)
roc, should these --disable options in comment #0 stop the audio and video elements from existing too, or is that a bug?
That building without MOZ_MEDIA also disables compiling of nsHTML{Audio,Video,Media}Element.cpp seems to be on purpose, see <http://mxr.mozilla.org/mozilla-central/source/content/html/content/src/Makefile.in#138>. It's just weird that there is no --disable-media flag.
(In reply to comment #5) > roc, should these --disable options in comment #0 stop the audio and video > elements from existing too, or is that a bug? That's intentional, although I'm open to arguments that it should be changed.
Actually would it be enough to provide the audio and video interfaces, even when not actually supporting the elements?
Attached patch Like this?Splinter Review
Peter, I haven't actually tried building without media so I hope it works...
Attachment #349719 - Flags: superreview?(roc)
Attachment #349719 - Flags: review?(roc)
Attachment #349719 - Flags: review?(mozilla)
Attachment #349719 - Flags: superreview?(roc)
Attachment #349719 - Flags: superreview+
Attachment #349719 - Flags: review?(roc)
Attachment #349719 - Flags: review+
Comment on attachment 349719 [details] [diff] [review] Like this? Something like that, if it builds
Attachment #349719 - Flags: review?(mozilla) → review+
Comment on attachment 349719 [details] [diff] [review] Like this? Yes, it does compile and also gives me back the working menu. Thanks, Neil.
Attachment #349719 - Flags: approval1.9.1?
Comment on attachment 349719 [details] [diff] [review] Like this? This stops people building without A/V for whatever reason from getting a broken UI in Firefox or SeaMonkey (or even, given bug 463155, Thunderbird).
Attachment #349604 - Attachment is obsolete: true
Attachment #349604 - Flags: review?(gavin.sharp)
Attachment #349603 - Flags: superreview?(neil)
Attachment #349603 - Flags: review?(neil)
Comment on attachment 349719 [details] [diff] [review] Like this? a191=beltzner
Attachment #349719 - Flags: approval1.9.1? → approval1.9.1+
Because I want this in soon, I made this version with the header to comply with the metered checkin rules.
Attachment #349603 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1b3
Looks like I pushed this as changeset b32dc52a37ff on releases/mozila-1.9.1 a few months ago; sorry for not updating the bug.
Keywords: fixed1.9.1
And in the meantime I verified that it is fixed on trunk and 1.9.1 branch.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: