Bug 466234: provide audio and video interfaces even when media is diabled, so that content popup menu construction works, r/sr=roc, r=weilbacher, a191=beltzner