dom/public/nsDOMClassInfoID.h
@@ -435,12 +435,11 @@ enum nsDOMClassInfoID {
   eDOMClassInfo_CSSFontFaceStyleDecl_id,
 
   // WhatWG Video Element
-#if defined(MOZ_MEDIA)
   eDOMClassInfo_HTMLVideoElement_id,
   eDOMClassInfo_HTMLSourceElement_id,
   eDOMClassInfo_HTMLMediaError_id,
   eDOMClassInfo_HTMLAudioElement_id,
-#endif
+
   eDOMClassInfo_ProgressEvent_id,
 
   eDOMClassInfo_XMLHttpRequestUpload_id,
